--- a/app/src/main/res/layout/activity_project_detail.xml
+++ b/app/src/main/res/layout/activity_project_detail.xml
@@ -23,7 +23,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:srcCompat="@drawable/viduProject1"
+        app:srcCompat="@drawable/vidu_project1"
         android:id="@+id/imageView2" />
 
     <TextView
@@ -189,7 +189,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/viduProject2"
+            app:srcCompat="@drawable/vidu_project2"
             android:id="@+id/imageView3" />
 
 
