--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,20 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="margin_large">50dp</dimen>
+    <dimen name="margin_medium">10dp</dimen>
+    <dimen name="margin_big">20dp</dimen>
+    <dimen name="margin_small">5dp</dimen>
+
+    <!--Text size-->
+    <dimen name="txt_largest">25sp</dimen>
+    <dimen name="txt_large">20sp</dimen>
+    <dimen name="txt_medium">16sp</dimen>
+    <dimen name="txt_small_medium">14sp</dimen>
+    <dimen name="txt_mid_medium">13sp</dimen>
+    <dimen name="txt_small">12sp</dimen>
+    <dimen name="txt_tiny">10sp</dimen>
+
+
 </resources>
