--- a/app/src/main/res/layout/activity_list_red_point.xml
+++ b/app/src/main/res/layout/activity_list_red_point.xml
@@ -9,7 +9,7 @@
     tools:context="com.example.vuduc.apptuthien.ListRedPointActivity">
 
     <TextView
-        android:id="@+id/txtDanhSachDuAn"
+        android:id="@+id/txtDanhSachDiemNong"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:text="Danh sách điểm nóng"
@@ -19,10 +19,10 @@
         android:textStyle="bold" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvListProject"
+        android:id="@+id/rvListRedPoint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txtDanhSachDuAn"
+        android:layout_below="@+id/txtDanhSachDiemNong"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
