--- a/app/src/main/res/layout/activity_create_project.xml
+++ b/app/src/main/res/layout/activity_create_project.xml
@@ -194,7 +194,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Danh sách nhà tài trợ: "
+                    android:text="Danh sách \nnhà tài trợ: "
                     android:layout_marginTop="20dp"
                     android:textSize="@dimen/txt_large"
                     android:textStyle="bold"/>
