--- a/app/src/main/res/layout/item_list_location.xml
+++ b/app/src/main/res/layout/item_list_location.xml
@@ -3,4 +3,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/txtLocation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:text="Đông Ngạc - Từ Liêm - Hà Nội"
+        android:textStyle="bold"
+        android:textSize="22sp"/>
 </LinearLayout>
