--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,7 @@
             android:id="@+id/edit_login_Password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email hoặc số điện thoại" />
+            android:hint="Mật khẩu" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.v7.widget.AppCompatButton
