--- a/app/src/main/res/layout/activity_project_detail.xml
+++ b/app/src/main/res/layout/activity_project_detail.xml
@@ -203,6 +203,7 @@
         android:layout_weight="0">
 
         <Button
+            android:id="@+id/btn_moi_taitro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -211,6 +212,7 @@
             android:layout_weight="1"/>
 
         <Button
+            android:id="@+id/btn_xemtt_taitro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -226,6 +228,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/btn_edit_thongtin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
