--- a/app/src/main/res/layout/activity_redpoint_detail.xml
+++ b/app/src/main/res/layout/activity_redpoint_detail.xml
@@ -95,14 +95,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Kinh phí dự kiến:"
+                android:text="Tình trạng:"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
 
@@ -111,20 +110,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15sp"
                 android:layout_marginTop="10dp"
-                android:text="500000000 đồng"
+                android:text="Cực kỳ nguy cấp"
                 android:textSize="18sp"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Đơn vị đã tài trợ"
+                android:text="Các dự án liên kết"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
 
