--- a/app/src/main/res/layout/item_list_link_project.xml
+++ b/app/src/main/res/layout/item_list_link_project.xml
@@ -4,12 +4,11 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/txtLocation"
+        android:id="@+id/txt_link_project"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:text="Đông Ngạc - Từ Liêm - Hà Nội"
-        android:textStyle="bold"
-        android:textSize="18sp"/>
+        android:text="Du an tu thien 1"
+        android:textSize="18sp"
+        android:textStyle="bold"/>
 </LinearLayout>
