--- a/app/src/main/res/layout/activity_redpoint_check_detail.xml
+++ b/app/src/main/res/layout/activity_redpoint_check_detail.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:fitsSystemWindows="true"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.vuduc.apptuthien.RedpointDetailActivity"
+    tools:context="com.example.vuduc.apptuthien.RedpointCheckDetailActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
@@ -123,27 +124,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Các dự án liên kết"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_list_link_project"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            </android.support.v7.widget.RecyclerView>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:text="Hình ảnh:"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
@@ -161,13 +141,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <Button
+                android:id="@+id/btn_confirm_redpoint"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Đăng ký cứu trợ"
+                android:text="Xác nhận điểm nóng"
                 android:textSize="18sp" />
 
             <Button
