--- a/app/src/main/res/layout/activity_list_red_point.xml
+++ b/app/src/main/res/layout/activity_list_red_point.xml
@@ -3,6 +3,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_list_project"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,5 +15,21 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <com.github.clans.fab.FloatingActionButton
+        android:id="@+id/fabCreateRedPoint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add_white_24dp"
+        fab:fab_colorNormal="@color/colorAccent"
+        fab:fab_colorPressed="@color/fab_press"
+        fab:fab_colorRipple="#99FFFFFF"
+        fab:fab_size="normal"
+        fab:fab_label="@string/fab_create_project"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"/>
 
 </RelativeLayout>
