--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,13 +12,13 @@
     tools:context="com.example.vuduc.apptuthien.LoginActivity">
 
     <ImageView
-        android:src="@drawable/logo"
+        android:src="@drawable/img_logo"
         android:layout_width="wrap_content"
-        android:layout_height="72dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="24dp"
+        android:layout_height="130dp"
+        android:layout_marginBottom="20dp"
         android:layout_gravity="center_horizontal"
-        android:id="@+id/imageView" />
+        android:id="@+id/imageView"
+        android:adjustViewBounds="true"/>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
