--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -9,15 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingTop="56dp"
+        android:paddingTop="20dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
         <ImageView
-            android:src="@drawable/logo"
+            android:src="@drawable/img_logo"
             android:layout_width="wrap_content"
-            android:layout_height="72dp"
-            android:layout_marginBottom="24dp"
+            android:layout_height="130dp"
+            android:layout_marginBottom="20dp"
             android:layout_gravity="center_horizontal" />
 
         <android.support.design.widget.TextInputLayout
