--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#212121</color>
+    <color name="colorPrimaryDark">#595959</color>
     <color name="colorAccent">#212121</color>
     <color name="primary_text">#212121</color>
     <color name="white">#ffffff</color>
+    <color name="fab_press">#595959</color>
+
 </resources>
