--- a/app/src/main/res/layout/activity_project_detail_signup.xml
+++ b/app/src/main/res/layout/activity_project_detail_signup.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:fitsSystemWindows="true"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.vuduc.apptuthien.RedpointDetailActivity"
+    tools:context="com.example.vuduc.apptuthien.ProjectDetailSignupActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
@@ -22,7 +23,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            app:srcCompat="@drawable/vidu_redpoint1"
+            app:srcCompat="@drawable/vidu_project1"
             android:id="@+id/imageView2"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"/>
@@ -30,7 +31,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Lũ lụt ở Hà Tĩnh"
+            android:text="@string/viduProject_title"
             android:textSize="22sp"
             android:textStyle="bold"
             android:layout_marginBottom="10dp"/>
@@ -53,6 +54,28 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Đơn vị tổ chức:"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15sp"
+                android:layout_marginTop="10dp"
+                android:text="Hội từ thiện TLU"
+                android:textSize="18sp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
@@ -68,14 +91,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15sp"
                 android:layout_marginTop="10dp"
-                android:text="1/1/2016"
+                android:text="Bắt đầu từ 1/1/2016"
                 android:textSize="18sp"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -85,23 +108,25 @@
                 android:textSize="18sp"
                 android:textStyle="bold"/>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_redpoint__detail_listLocation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            </android.support.v7.widget.RecyclerView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15sp"
+                android:layout_marginTop="10dp"
+                android:text="Trái đất"
+                android:textSize="18sp"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Tình trạng:"
+                android:text="Kinh phí dự kiến:"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
 
@@ -110,29 +135,44 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15sp"
                 android:layout_marginTop="10dp"
-                android:text="Cực kỳ nguy cấp"
+                android:text="500000000 đồng"
                 android:textSize="18sp"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Các dự án liên kết"
+                android:text="Kinh phí\nđược tài trợ"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_list_link_project"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-            </android.support.v7.widget.RecyclerView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15sp"
+                    android:layout_marginTop="10dp"
+                    android:text="500000000 đồng"
+                    android:textSize="18sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15sp"
+                    android:layout_marginTop="10dp"
+                    android:text="Link sao kê"
+                    android:textSize="18sp"/>
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -151,34 +191,27 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/vidu_redpoint1"
+                app:srcCompat="@drawable/vidu_project2"
                 android:id="@+id/imageView3" />
+
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_weight="0">
 
             <Button
-                android:id="@+id/btn_dangky_cuutro"
+                android:id="@+id/btn_xacnhan_taitro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Đăng ký cứu trợ"
-                android:textSize="18sp" />
+                android:text="Xác nhận tài trợ"
+                android:textSize="18sp"
+                android:layout_weight="1"/>
 
-            <Button
-                android:id="@+id/btn_edit_thongtin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="@dimen/margin_large"
-                android:text="Sửa thông tin"
-                android:textSize="18sp" />
         </LinearLayout>
 
     </LinearLayout>
